add cv and pg links
added link to CV in the navigator and a link to the project on my workflow

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/static/CV Alfa.pdf">CV</a></li>
                 </ul>
             </div>
         </nav>
@@ -153,6 +154,11 @@
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="./pg/html/index.html"> Web Paginas granadinas (MDC)</a>
+                        </li>
+                        
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Mount and repair systems and devices.
