--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificates</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/static/CV Alfa.pdf">CV</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/static/Cv Alfa.pdf">CV</a></li>
                 </ul>
             </div>
         </nav>
