--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view">App</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
@@ -33,6 +32,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/static/Cv Alfa.pdf">CV</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/html/index.html" target="_blank">WEB [Paginas Granadinas]</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view" target="_blank">APP</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,7 +43,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Albert<a href="./pg/html/index.html">o</a>
+                        Albert<a href="./pg/html/index.html" target="_blank">o</a>
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -154,16 +155,7 @@
                         <li class="list-inline-item"><i class="fa-solid fa-terminal"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <a href=" https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view">APK (MDC)</a>
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <a href="./pg/html/index.html"> Web Paginas granadinas (MDC)</a>
-                        </li>
-                        
+                    <ul class="fa-ul mb-0">                
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Mount and repair systems and devices.
@@ -184,6 +176,14 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href="./pg/html/index.html" target="_blank"> Web Paginas Granadinas (MDC)</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            <a href=" https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view" target="_blank">Beta Android APP (MDC)</a>
+                        </li>        
                     </ul>
                 </div>
             </section>
