--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/static/Cv Alfa.pdf">CV</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/html/index.html" target="_blank">WEB [Paginas Granadinas]</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view" target="_blank">APP</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./pg/html/index.html" target="_blank">WEB MDC</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1VhHXDsawQw8oU_nmEUXRqjPCbSLc-tdA/view" target="_blank">APP MDC</a></li>
                 </ul>
             </div>
         </nav>
