--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Albert<a href="./pg/html/index.html" target="_blank">o</a>
+                        Alberto</a>
                         <span class="text-primary">Fernandez Alonso</span>
                     </h1>
                     <div class="subheading mb-5">
                         C\Arabial 115 · Granada, CP 18003 · 625230857 · 
                         <a href="mailto:ciberwaters@email.com">ciberwaters@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a versatile technician who adapts to various fields, from hardware system assembly to software programming, including web development and multi-system applications.</p>
+                    <p class="lead mb-5">I am a versatile technician who adapts to various fields, from hardware system assembly to software programming, including web development and multi-system applications. </p>
+                    <p class="lead mb-5"> Try always do your best. What you plant now, you will harvest tomorrow. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/alberto-fernandez-alonso-335a49148/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Albertuso/"><i class="fab fa-github"></i></a>
@@ -98,7 +99,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Administrator of computer systems and local area networks </h3>
-                            <div class="subheading mb-3">C.E.S. Ramon y Cajal</div>
+                            <div class="subheading mb-3">C.E.S. Ramon y Cajal (Granada)</div>
                             <p>Made in 2 years with an average of 6.6</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2004 - June 2006</span></div>
@@ -106,7 +107,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web and multimedia design</h3>
-                            <div class="subheading mb-3">S.A.E. Misioneras del divino maestro</div>
+                            <div class="subheading mb-3">S.A.E. Misioneras del divino maestro Albaicin-(Granada)</div>
                             <p>F.P.O. Nº18 2005 J 58 18 3</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2005 - June 2006</span></div>
@@ -114,7 +115,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">web application deployment</h3>
-                            <div class="subheading mb-3">I.E.S. Hermenegildo Lanz</div>
+                            <div class="subheading mb-3">I.E.S. Hermenegildo Lanz (Granada)</div>
                             <p>Made in 2 years with an average of 8 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - June 2020</span></div>
@@ -122,7 +123,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Android and Multiplatform application development</h3>
-                            <div class="subheading mb-3">I.E.S. Hermenegildo Lanz</div>
+                            <div class="subheading mb-3">I.E.S. Hermenegildo Lanz (Granada)</div>
                             <p>Made in 2 years with an average of 7.5 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - June 2025</span></div>
